--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "make:frontend": "yarn run download-frontend",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint": "eslint --ext .ts,.tsx .",
-    "lint:fix": "eslint --fix --ext .ts,.tsx .",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
     "make": "yarn run vite:compile && electron-builder build --config=builder-debug.config.ts",
     "make:assets": "node scripts/makeComfy.js",
     "make:nvidia": "yarn run make -- --nvidia",
