--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@playwright/test": "^1.47.2",
     "@sentry/wizard": "^3.30.0",
     "@todesktop/cli": "^1.9.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/eslint__js": "^8.42.3",
